# opcua

./: Cargo.toml
.github/workflows/: main.yml
client/src/: session.rs  session_state.rs  subscription_state.rs
integration/src/: harness.rs  tests.rs
lib/src/client/: client.rs
lib/src/client/session/: session.rs  session_state.rs
lib/src/core/comms/: secure_channel.rs
lib/src/core/tests/: comms.rs
lib/src/server/: builder.rs  config.rs  server.rs
lib/src/server/comms/: tcp_transport.rs
lib/src/types/: date_time.rs
types/src/: encoding.rs
