# These settings are present to demonstrate minimal binary size in release mode. Don't forget to strip the executable
# too.
[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'

[workspace]
members = [
    "lib",
    "integration",
    "samples/demo-server",
    "samples/simple-client",
    "samples/mqtt-client",
    "samples/simple-server",
    "samples/chess-server",
    "samples/discovery-client",
    ## TODO: rollback when actix-web is upgraded in upstream
    ## https://github.com/locka99/opcua/issues/291
    # "samples/web-client",
    "samples/event-client",
    "tools/certificate-creator"
]
